created a new home session for the web, and added all needed content and styles.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <!-- header session -->
     
     <header class="header">
         <a href="#home" class="logo">BRAZ <span>LOW</span></a>
@@ -22,6 +24,31 @@
             <a href="#contact">Contact</a>
         </nav>
     </header>
+
+    <!-- main session of the website -->
+
+    <section id="home">
+        <div class="home-content">
+            <h1>Hi, it's <span>Brazlow</span></h1>
+            <h3 class="text-animation">I am <span></span></h3>
+            <p>I am trying to do my best. Becouse I don't have much time to play. They both are really waiting for me or for my success. Now I'm a man who knows his own dicisions or dreams like cristal clear, and he knows how to work for it. But I know that it's very hard to become success alone without any courses or teachers. It's great, couse the teachers made alot of new teachers to teach without them. Thet's why I'm learning or working on it. The lessen I got in my life is, hard work is the key of every smart work, and every smart works had a hard time.</p>
+            
+            <div class="social-icons">
+                <a href="#"><box-icon name='linkedin' type='logo' color='#ffffff' ></box-icon></a>
+                <a href="#"><box-icon name='github' type='logo' color='#ffffff' ></box-icon></a>
+                <a href="#"><box-icon name='instagram-alt' type='logo' color='#ffffff' ></box-icon></a>
+                <a href="#"><box-icon name='twitter' type='logo' color='#ffffff' ></box-icon></a>
+            </div>
+
+            <div class="btn-group">
+                <a href="#hire" class="btn">Hire</a>
+                <a href="#contact" class="btn">Contact</a>
+            </div>
+        </div>
+        <div class="home-img">
+            <img src="mypngimg.png" alt="myimage">
+        </div>
+    </section>
 
     <script src="main.js"></script>
 </body>
