--- a/index.html
+++ b/index.html
@@ -50,6 +50,42 @@
         </div>
     </section>
 
+    <!-- Education  session -->
+
+    <section id="education">
+        <h2 class="heading">Education</h2>
+
+        <div class="timeline-items">
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                    <div class="timeline-date">2021</div>
+                    <div class="timeline-content">
+                        <h3>High School</h3>
+                        <p>I completed my high school or sslc from my own village. And earned full A+.</p>
+                    </div>
+            </div>
+      
+
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                    <div class="timeline-date">2023</div>
+                    <div class="timeline-content">
+                        <h3>Incompleted diploma computer science</h3>
+                        <p>I completed my high school or sslc from my own village. And earned full A+.</p>
+                    </div>
+            </div>
+
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                    <div class="timeline-date">2024</div>
+                    <div class="timeline-content">
+                        <h3>Self Web designing</h3>
+                        <p>I completed my high school or sslc from my own village. And earned full A+.</p>
+                    </div>
+            </div>
+        </div>
+    </section>
+
     <script src="main.js"></script>
 </body>
 </html>
