Created a new Services sesssion and styled.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,39 @@
         </div>
     </section>
 
+    <!-- Service session -->
+
+     <section id="services">
+        <h2 class="heading">Servives</h2>
+
+        <div class="services-container">
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>UI Design</h4>
+                    <p>I am trying to do my best. Becouse I don't have much time to play. They both are really waiting for me or for my success. Now I'm a man who knows his own dicisions or dreams like cristal clear, and he knows how to work for it. But I know that it's very hard to become success alone without any courses or teachers. It's great, couse the teachers made alot of new teachers to teach without them. Thet's why I'm learning or working on it. The lessen I got in my life is, hard work is the key of every smart work, and every smart works had a hard time.</p>
+                </div>
+            </div>
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>Front end development</h4>
+                    <p>I am trying to do my best. Becouse I don't have much time to play. They both are really waiting for me or for my success. Now I'm a man who knows his own dicisions or dreams like cristal clear, and he knows how to work for it. But I know that it's very hard to become success alone without any courses or teachers. It's great, couse the teachers made alot of new teachers to teach without them. Thet's why I'm learning or working on it. The lessen I got in my life is, hard work is the key of every smart work, and every smart works had a hard time.</p>
+                </div>
+            </div>
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>Back end development</h4>
+                    <p>I am trying to do my best. Becouse I don't have much time to play. They both are really waiting for me or for my success. Now I'm a man who knows his own dicisions or dreams like cristal clear, and he knows how to work for it. But I know that it's very hard to become success alone without any courses or teachers. It's great, couse the teachers made alot of new teachers to teach without them. Thet's why I'm learning or working on it. The lessen I got in my life is, hard work is the key of every smart work, and every smart works had a hard time.</p>
+                </div>
+            </div>
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>Testing</h4>
+                    <p>I am trying to do my best. Becouse I don't have much time to play. They both are really waiting for me or for my success. Now I'm a man who knows his own dicisions or dreams like cristal clear, and he knows how to work for it. But I know that it's very hard to become success alone without any courses or teachers. It's great, couse the teachers made alot of new teachers to teach without them. Thet's why I'm learning or working on it. The lessen I got in my life is, hard work is the key of every smart work, and every smart works had a hard time.</p>
+                </div>
+            </div>
+        </div>
+     </section>
+
     <script src="main.js"></script>
 </body>
 </html>
