Created a testimonial session and styled.

--- a/index.html
+++ b/index.html
@@ -119,6 +119,56 @@
         </div>
      </section>
 
+     <!-- Testimonials session -->
+
+     <section id="testimonials">
+        <div class="testimonials-box">
+            <h2 class="heading">Testimonials</h2>
+
+            <div class="wrapper">
+                <div class="testimonial-item">
+                    <img src="wrapper1.avif" alt="wrapper1">
+
+                    <h2>Mariyam</h2>
+                    <div class="rating">
+                        <box-icon type='solid' name='star' color="gold"></box-icon>
+                        <box-icon type='solid' name='star' color="gold"></box-icon>
+                        <box-icon type='solid' name='star' color="gold"></box-icon>
+                        <box-icon type='solid' name='star' color="gold"></box-icon>
+                        <box-icon type='solid' name='star' color="gold"></box-icon>
+                    </div>
+                    <p>I completed my high school or sslc from my own village. And earned full A+.</p>
+                </div>
+                <div class="testimonial-item">
+                    <img src="wrapper2.jpg" alt="wrapper2">
+
+                    <h2>Adrinal</h2>
+                    <div class="rating">
+                        <box-icon type='solid' name='star' color="gold"></box-icon>
+                        <box-icon type='solid' name='star' color="gold"></box-icon>
+                        <box-icon type='solid' name='star' color="gold"></box-icon>
+                        <box-icon type='solid' name='star' color="gold"></box-icon>
+                        <box-icon type='solid' name='star' color="gold"></box-icon>
+                    </div>
+                    <p>I completed my high school or sslc from my own village. And earned full A+.</p>
+                </div>
+                <div class="testimonial-item">
+                    <img src="wrapper1.avif" alt="wrapper3">
+
+                    <h2>Sara</h2>
+                    <div class="rating">
+                        <box-icon type='solid' name='star' color="gold"></box-icon>
+                        <box-icon type='solid' name='star' color="gold"></box-icon>
+                        <box-icon type='solid' name='star' color="gold"></box-icon>
+                        <box-icon type='solid' name='star' color="gold"></box-icon>
+                        <box-icon type='solid' name='star' color="gold"></box-icon>
+                    </div>
+                    <p>I completed my high school or sslc from my own village. And earned full A+.</p>
+                </div>
+            </div>
+        </div>
+     </section>
+
     <script src="main.js"></script>
 </body>
 </html>
