--- a/index.html
+++ b/index.html
@@ -169,6 +169,52 @@
         </div>
      </section>
 
+     <!-- Contact session -->
+
+     <section id="contact">
+        <h2 class="heading">Contact</h2>
+
+        <form action="">
+            <div class="input-group">
+                <div class="input-box">
+                    <input type="text" name="name" id="name" placeholder="Your name">
+                    <input type="email" name="email" id="email" placeholder="Email">
+                </div>
+                <div class="input-box">
+                    <input type="number" name="number" id="number" placeholder="Phone number">
+                    <input type="text" name="subject" id="subject" placeholder="subject">
+                </div>
+            </div>
+            <div class="input-group2">
+                <textarea name="textarea" id="textarea" placeholder="Your Message..."></textarea>
+                <input type="submit" value="Send Message" class="btn">
+            </div>
+        </form>
+     </section>
+
+     <footer class="footer">
+        <div class="social">
+            <a href="#"><box-icon name='linkedin' type='logo' color='#ffffff' ></box-icon></a>
+            <a href="#"><box-icon name='github' type='logo' color='#ffffff' ></box-icon></a>
+            <a href="#"><box-icon name='instagram-alt' type='logo' color='#ffffff' ></box-icon></a>
+            <a href="#"><box-icon name='twitter' type='logo' color='#ffffff' ></box-icon></a>
+        </div>
+
+        <ul>
+            <li>
+                <a href="#">FAQ</a>
+                <a href="#">Services</a>
+                <a href="#">About Me</a>
+                <a href="#">Testimonials</a>
+                <a href="#">Contact</a>
+            </li>
+        </ul>
+
+        <p class="copy">
+            &copy; Brazlowseez  |   All Rights Reserved
+        </p>
+     </footer>
+
     <script src="main.js"></script>
 </body>
 </html>
