Converted a flexible or responsive without bootstrap. Only using css @media property.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <a href="#home" class="logo">BRAZ <span>LOW</span></a>
 
-        <box-icon name='menu'></box-icon>
+        <box-icon name='menu' color="#00ffee" class="menu-icon"></box-icon>
         
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
@@ -203,10 +203,10 @@
         <ul>
             <li>
                 <a href="#">FAQ</a>
-                <a href="#">Services</a>
-                <a href="#">About Me</a>
-                <a href="#">Testimonials</a>
-                <a href="#">Contact</a>
+                <a href="#services">Services</a>
+                <a href="#home">About Me</a>
+                <a href="#testimonials">Testimonials</a>
+                <a href="#contact">Contact</a>
             </li>
         </ul>
 
