Added my social media links to get connected. And added contact link for Hire button.

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
             <p>I am trying to do my best. Becouse I don't have much time to play. They both are really waiting for me or for my success. Now I'm a man who knows his own dicisions or dreams like cristal clear, and he knows how to work for it. But I know that it's very hard to become success alone without any courses or teachers. It's great, couse the teachers made alot of new teachers to teach without them. Thet's why I'm learning or working on it. The lessen I got in my life is, hard work is the key of every smart work, and every smart works had a hard time.</p>
             
             <div class="social-icons">
-                <a href="#"><box-icon name='linkedin' type='logo' color='#ffffff' ></box-icon></a>
-                <a href="#"><box-icon name='github' type='logo' color='#ffffff' ></box-icon></a>
-                <a href="#"><box-icon name='instagram-alt' type='logo' color='#ffffff' ></box-icon></a>
-                <a href="#"><box-icon name='twitter' type='logo' color='#ffffff' ></box-icon></a>
+                <a href="https://www.linkedin.com/in/muhammad-adnan-a479052a1/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BwpOZ4PV4RQWsW5w2ZkyEFQ%3D%3D"><box-icon name='linkedin' type='logo' color='#ffffff' ></box-icon></a>
+                <a href="https://github.com/ADNUKUNHOME"><box-icon name='github' type='logo' color='#ffffff' ></box-icon></a>
+                <a href="https://www.instagram.com/adhnan.abdullah/"><box-icon name='instagram-alt' type='logo' color='#ffffff' ></box-icon></a>
+                <a href="https://twitter.com/ADNUKUNHOME"><box-icon name='twitter' type='logo' color='#ffffff' ></box-icon></a>
             </div>
 
             <div class="btn-group">
-                <a href="#hire" class="btn">Hire</a>
+                <a href="#contact" class="btn">Hire</a>
                 <a href="#contact" class="btn">Contact</a>
             </div>
         </div>
@@ -177,8 +177,8 @@
         <form action="">
             <div class="input-group">
                 <div class="input-box">
-                    <input type="text" name="name" id="name" placeholder="Your name">
-                    <input type="email" name="email" id="email" placeholder="Email">
+                    <input type="text" name="name" id="name" placeholder="Your name" required>
+                    <input type="email" name="email" id="email" placeholder="Email" required>
                 </div>
                 <div class="input-box">
                     <input type="number" name="number" id="number" placeholder="Phone number">
@@ -194,10 +194,10 @@
 
      <footer class="footer">
         <div class="social">
-            <a href="#"><box-icon name='linkedin' type='logo' color='#ffffff' ></box-icon></a>
-            <a href="#"><box-icon name='github' type='logo' color='#ffffff' ></box-icon></a>
-            <a href="#"><box-icon name='instagram-alt' type='logo' color='#ffffff' ></box-icon></a>
-            <a href="#"><box-icon name='twitter' type='logo' color='#ffffff' ></box-icon></a>
+            <a href="https://www.linkedin.com/in/muhammad-adnan-a479052a1/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BwpOZ4PV4RQWsW5w2ZkyEFQ%3D%3D"><box-icon name='linkedin' type='logo' color='#ffffff' ></box-icon></a>
+            <a href="https://github.com/ADNUKUNHOME"><box-icon name='github' type='logo' color='#ffffff' ></box-icon></a>
+            <a href="https://www.instagram.com/adhnan.abdullah/"><box-icon name='instagram-alt' type='logo' color='#ffffff' ></box-icon></a>
+            <a href="https://twitter.com/ADNUKUNHOME"><box-icon name='twitter' type='logo' color='#ffffff' ></box-icon></a>
         </div>
 
         <ul>
